# Satya_AI

./: .gitignore  .replit  AGENTS.md  LICENSE  QA_CHECKLIST.md  README.md  agent_runner.py  app.py  benchmark_list_tasks.py  benchmark_storage.py  capture_baseline.py  main_owner_copy.md  main_owner_visual_specs.md  pyproject.toml  replit.md  verify_main_owner.py  verify_refactor.py  verify_refactor_v2.py  verify_time_ago.py
.jules/: bolt.md  palette.md  sentinel.md
satya_data/tasks/: 26e61ad0.json  61de3d76.json  a30e78b3.json  a344b224.json  da6d8fcf.json  e3757472.json
src/satya/core/: __init__.py  completion.py  git_handler.py  scraper.py  storage.py  tasks.py  watchdog.py
src/satya/sdk/: __init__.py  client.py
tests/: benchmark_storage.py  conftest.py  test_can_do_validator.py  test_completion_checker.py  test_scraper_security.py  test_sdk_create_task.py  test_ssrf.py  test_storage.py  test_storage_cache.py  test_task_status_flow.py  test_watchdog.py
